[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
numpy = "^1.21.4"
invoke = "^1.6.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
lint = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
